--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -1,24 +1,17 @@
-<!doctype html>
+{% load static %}
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>CONSEGUI</title>
-
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-          crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'homepage/css/style.css' %}">
+    <title>osantoschris | {% block title %}início{% endblock title %}</title>
 </head>
 <body>
-<main class="container">
-    <div class="row text-center justify-content-center">
-        <div class="col">
-            <h1 class="display-4">CONSEGUI PUBLICAR ESSA MERDA</h1>
-        </div>
+    {% block content %}
+    <div class="main-container">
+        <div class="sub-container"></div>
     </div>
-</main>
+    {% endblock content %}
 </body>
 </html>
