--- a/homepage/static/homepage/css/style.css
+++ b/homepage/static/homepage/css/style.css
@@ -3,30 +3,91 @@
     box-sizing: border-box;
 }
 
-/* body {
+body {
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-} */
+}
+
 .header {
-    width: 30%;
-    height: 30%;
-    border: 1px solid red;
+    width: 100%;
+    height: 5rem;
+    background-color: white;
+    border-bottom: 1px solid #CCCCCC;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+#nav-logo {
+    width: 2rem;
+    height: 2rem;
+    border-radius: 0.3rem;
+    background-color: #000000;
+    margin-left: 0.5rem;
+}
+#btn-fechar {
+    width: 2rem;
+    height: 2rem;
+    margin-right: 0.5rem;
+    position: relative;
+}
+#btn-fechar::before,
+#btn-fechar::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 3px;
+    background-color: #000000;
+    transform-origin: center;
+}
+#btn-fechar::before{
+    transform: translate(-50%, -50%) rotate(45deg);
+}
+#btn-fechar::after{
+    transform: translate(-50%, -50%) rotate(-45deg);
+}
+#btn-fechar:hover {
+    cursor: pointer;
 }
 
 .main-container {
     width: 100%;
-    height: 100%;
+    height: 80%;
     display: flex;
-    align-items: center;
     justify-content: center;
 }
-
 .sub-container {
     width: 90%;
-    height: 2000px;
-    border: 1px solid red;
+    height: 70%;
+    background-color: rgb(0, 0, 0, 0.15);
+    margin-top: 1rem;
+    border-radius: 0.5rem;
+    /* box-shadow: 0.15rem 0.15rem 0.15rem 0.15rem rgb(0, 0, 0, 0.3) */
+}
+
+.footer {
+    width: 100%;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: red;
+}
+.footer-header {
+    display: flex;
+    align-items: center;
+    width: 95%;
+    height: auto;
+    background-color: white;
+    margin: 1rem 0;
+    border-radius: 0.5rem;
+}
+.footer-header img {
+    width: 2rem;
+    height: 2rem;
+    margin: 0.4rem;
 }
