--- a/homepage/static/homepage/css/style.css
+++ b/homepage/static/homepage/css/style.css
@@ -5,69 +5,98 @@
 
 body {
     width: 100vw;
-    height: 100vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .header {
     width: 100%;
-    height: 5rem;
-    background-color: white;
+    height: 75px;
+    background-color: #FFFFFF;
     border-bottom: 1px solid #CCCCCC;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-#nav-logo {
+#nav-logo img {
     width: 2rem;
     height: 2rem;
-    border-radius: 0.3rem;
-    background-color: #000000;
-    margin-left: 0.5rem;
-}
-#btn-fechar {
-    width: 2rem;
-    height: 2rem;
-    margin-right: 0.5rem;
-    position: relative;
-}
-#btn-fechar::before,
-#btn-fechar::after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    height: 3px;
-    background-color: #000000;
-    transform-origin: center;
-}
-#btn-fechar::before{
-    transform: translate(-50%, -50%) rotate(45deg);
-}
-#btn-fechar::after{
-    transform: translate(-50%, -50%) rotate(-45deg);
-}
-#btn-fechar:hover {
-    cursor: pointer;
+    margin-left: 1rem;
 }
 
 .main-container {
     width: 100%;
-    height: 80%;
+    height: 769px;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .sub-container {
-    width: 90%;
-    height: 70%;
+    width: 70%;
+    height: 3rem;
     background-color: rgb(0, 0, 0, 0.15);
-    margin-top: 1rem;
+    /* margin-top: 1rem; */
+    margin: 1rem 0;
     border-radius: 0.5rem;
-    /* box-shadow: 0.15rem 0.15rem 0.15rem 0.15rem rgb(0, 0, 0, 0.3) */
 }
+#comments-area {
+    height: 150px;
+    background-color: #FFFFFF;
+    border: 1px solid #CCCCCC;
+    border-radius: 1rem;
+}
+#comments-area > h3 {
+    padding: 2rem 1rem;
+}
+#comments-area img {
+    width: 50px;
+    height: 50px;
+    margin: 0 1rem;
+    border-radius: 50%;
+}
+#comments-area > .coment-content {
+    display: flex;
+    align-items: center;
+}
+#comments-area > .coment-content p {
+    font-size: 0.7rem;
+    color: #949494;
+}
+#comments-area > .coment-content h4 {
+    font-size: 1.1rem;
+    color: #545454;
+}
+#more-comments {
+    height: 75px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #FFFFFF;
+}
+#more-comments img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-left: -15px;
+    box-shadow: 3px 3px 3px 3px rgb(0, 0, 0, 0.15);
+}
+#more-comments img:first-child {
+    margin-left: 0;
+}
+.plus-one {
+    margin-left: 1rem;
+    padding: 0.5rem;
+    border-radius: 30%;
+    background-color: #e9e9e9;
+    color: #545454;
+}
+.plus-one:hover {
+    cursor: pointer;
+}
+
 
 .footer {
     width: 100%;
@@ -75,19 +104,19 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: red;
+    background-color: #FFFFFF;
+    border-top: 1px solid #CCCCCC;
 }
 .footer-header {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     width: 95%;
-    height: auto;
-    background-color: white;
+    height: 3rem;
     margin: 1rem 0;
-    border-radius: 0.5rem;
 }
 .footer-header img {
     width: 2rem;
     height: 2rem;
-    margin: 0.4rem;
+    margin: 0 0.4rem;
 }
