--- a/homepage/static/homepage/css/style.css
+++ b/homepage/static/homepage/css/style.css
@@ -12,6 +12,10 @@ body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+body.no-scroll {
+    overflow: hidden;
+}
+
 .header {
     width: 100%;
     height: 75px;
@@ -26,6 +30,74 @@ body {
     height: 2rem;
     margin-left: 1rem;
 }
+
+/* Menu dropdown */
+.menu-icon {
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    position: relative;
+    z-index: 2;
+    margin: 20px;
+}
+.menu-icon div {
+    width: 100%;
+    height: 4px;
+    background-color: #000000;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+.change .bar1 {
+    transform: rotate(-45deg) translate(-7px, 6px);
+}
+.change .bar2 {
+    opacity: 0;
+}
+.change .bar3 {
+    transform: rotate(45deg) translate(-7px, -6px);
+}
+.dropdown-menu {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 1;
+    transition: 0.5s;
+}
+.dropdown-menu.show {
+    display: flex;
+    justify-content: center;
+}
+
+.dropdown-menu ul {
+    width: 100%;
+    margin: 0;
+    margin-top: 50px;
+    padding: 0;
+    transition: 0.5s;
+}
+.dropdown-menu ul li {
+    width: 90%;
+    text-align: center;
+    padding: 10px;
+    margin: 20px;
+    border: 1px solid #CCCCCC;
+    background-color: #CCCCCC;
+    border-radius: 5px;
+    list-style: none;
+    color: #FFFFFF;
+}
+.dropdown-menu ul li:hover {
+    background-color: #545454;
+    border: 1px solid #545454;
+    cursor: pointer;
+}
+
+
+
 
 .main-container {
     width: 100%;
@@ -120,3 +192,4 @@ body {
     height: 2rem;
     margin: 0 0.4rem;
 }
+
