--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -13,7 +13,21 @@
         <div id="nav-logo">
             <img src="{% static "homepage/img/logo.png" %}" alt="" srcset="">
         </div>
-        
+        <div class="menu-icon" id="menuIcon">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </div>
+    </div>
+
+    <div class="dropdown-menu" id="dropdownMenu">
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Products</li>
+            <li>Clients</li>
+            <li>Contact</li>
+        </ul>
     </div>
 
     {% block content %}
@@ -71,5 +85,6 @@
 
     </div>
 
+    <script src="{% static "homepage/js/script.js" %}"></script>
 </body>
 </html>
