--- a/staticfiles/homepage/css/style.css
+++ b/staticfiles/homepage/css/style.css
@@ -237,4 +237,10 @@ body.no-scroll {
     .menu-icon {
         display: none;
     }
+    #more-comments {
+        display: none;
+    }
+    #comments-area {
+        display: none;
+    }
 }
