--- a/homepage/static/homepage/css/style.css
+++ b/homepage/static/homepage/css/style.css
@@ -46,7 +46,6 @@ body.no-scroll {
     width: 100%;
     height: 2px;
     background-color: #000000;
-    /* margin: 2px 0; */
     transition: 0.4s ease-in-out;
 }
 .menu-icon .bar1 {
@@ -82,6 +81,7 @@ body.no-scroll {
     width: 0;
     height: 100%;
     background-color: #FFFFFF;
+    /* background-color: rgba(255, 255, 255, 0.96); */
     z-index: 1;
     transition: 0.8s;
     margin-left: -390px;
@@ -131,19 +131,21 @@ body.no-scroll {
 }
 
 
+/* Conteudo */
 .main-container {
     width: 100%;
-    height: 769px;
+    min-height: 796px;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 .sub-container {
     width: 70%;
-    height: 3rem;
-    background-color: rgb(0, 0, 0, 0.15);
+    height: auto;
     margin: 1rem 0;
-    border-radius: 0.5rem;
+    /* background-color: rgb(0, 0, 0, 0.15);
+    border-radius: 0.5rem; */
 }
 #comments-area {
     height: 150px;
@@ -189,6 +191,7 @@ body.no-scroll {
 #more-comments img:first-child {
     margin-left: 0;
 }
+
 .plus-one {
     margin-left: 1rem;
     padding: 0.5rem;
@@ -198,6 +201,10 @@ body.no-scroll {
 }
 .plus-one:hover {
     cursor: pointer;
+}
+.plus-one a {
+    text-decoration: none;
+    color: #545454;
 }
 
 
@@ -235,6 +242,12 @@ body.no-scroll {
 
     }
     .menu-icon {
+        display: none;
+    }
+    #more-comments {
+        display: none;
+    }
+    #comments-area {
         display: none;
     }
 }
