--- a/homepage/static/homepage/css/style.css
+++ b/homepage/static/homepage/css/style.css
@@ -1,10 +1,10 @@
 * {
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
-
 body {
-    width: 100vw;
+    width: 100%;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -17,7 +17,7 @@ body.no-scroll {
 }
 
 .header {
-    width: 100%;
+    width: 95%;
     height: 75px;
     background-color: #FFFFFF;
     border-bottom: 1px solid #CCCCCC;
@@ -222,7 +222,7 @@ body.no-scroll {
     align-items: center;
     justify-content: space-between;
     width: 95%;
-    height: 3rem;
+    height: auto;
     margin: 1rem 0;
 }
 .footer-header img {
@@ -234,6 +234,16 @@ body.no-scroll {
 
 
 @media (min-width: 801px) {
+    .header {
+        width: 70%;
+    }
+    .footer {
+        width: 70%;
+    }
+    .main-container {
+        width: 70%;
+    }
+
     .navbar {
         display: flex;
         flex-direction: column;
@@ -249,5 +259,11 @@ body.no-scroll {
     }
     #comments-area {
         display: none;
+    }
+}
+
+@media (min-width: 768px) {
+    .dropdown-menu.show {
+        width: 70%;
     }
 }
