--- a/staticfiles/homepage/css/style.css
+++ b/staticfiles/homepage/css/style.css
@@ -1,10 +1,10 @@
 * {
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
-
 body {
-    width: 100vw;
+    width: 100%;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -17,7 +17,7 @@ body.no-scroll {
 }
 
 .header {
-    width: 100%;
+    width: 95%;
     height: 75px;
     background-color: #FFFFFF;
     border-bottom: 1px solid #CCCCCC;
@@ -46,7 +46,6 @@ body.no-scroll {
     width: 100%;
     height: 2px;
     background-color: #000000;
-    /* margin: 2px 0; */
     transition: 0.4s ease-in-out;
 }
 .menu-icon .bar1 {
@@ -82,6 +81,7 @@ body.no-scroll {
     width: 0;
     height: 100%;
     background-color: #FFFFFF;
+    /* background-color: rgba(255, 255, 255, 0.96); */
     z-index: 1;
     transition: 0.8s;
     margin-left: -390px;
@@ -131,19 +131,21 @@ body.no-scroll {
 }
 
 
+/* Conteudo */
 .main-container {
     width: 100%;
-    height: 769px;
+    min-height: 796px;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 .sub-container {
     width: 70%;
-    height: 3rem;
-    background-color: rgb(0, 0, 0, 0.15);
+    height: auto;
     margin: 1rem 0;
-    border-radius: 0.5rem;
+    /* background-color: rgb(0, 0, 0, 0.15);
+    border-radius: 0.5rem; */
 }
 #comments-area {
     height: 150px;
@@ -189,6 +191,7 @@ body.no-scroll {
 #more-comments img:first-child {
     margin-left: 0;
 }
+
 .plus-one {
     margin-left: 1rem;
     padding: 0.5rem;
@@ -198,6 +201,10 @@ body.no-scroll {
 }
 .plus-one:hover {
     cursor: pointer;
+}
+.plus-one a {
+    text-decoration: none;
+    color: #545454;
 }
 
 
@@ -215,7 +222,7 @@ body.no-scroll {
     align-items: center;
     justify-content: space-between;
     width: 95%;
-    height: 3rem;
+    height: auto;
     margin: 1rem 0;
 }
 .footer-header img {
@@ -227,6 +234,16 @@ body.no-scroll {
 
 
 @media (min-width: 801px) {
+    .header {
+        width: 70%;
+    }
+    .footer {
+        width: 70%;
+    }
+    .main-container {
+        width: 70%;
+    }
+
     .navbar {
         display: flex;
         flex-direction: column;
@@ -242,5 +259,11 @@ body.no-scroll {
     }
     #comments-area {
         display: none;
+    }
+}
+
+@media (min-width: 768px) {
+    .dropdown-menu.show {
+        width: 70%;
     }
 }
