--- a/homepage/static/homepage/css/index.css
+++ b/homepage/static/homepage/css/index.css
@@ -1,7 +1,10 @@
+/* Estilizações Gerais */
 body {
     text-align: justify;
 }
 
+
+/* Barra de navegação */
 .navbar ul li {
     display: flex;
     width: 10rem;
@@ -11,24 +14,23 @@ body {
     padding: 0 1rem;
     margin: 0 1rem;
 }
-
 .navbar ul {
     display: flex;
     width: 80%;
     list-style: none;
 }
-
 .navbar a {
     text-decoration: none;
     color: #545454;
 }
 .active {
-    border-radius: 5%;
+    border-radius: 0.4rem;
     background-color: #F5F5F5;
     color: #FFFFFF;
     padding: 0.5rem 0;
 }
 
+/* Estilização do conteúdo */
 .title {
     font-size: 1.5rem;
     padding-bottom: 0.5rem;
@@ -37,8 +39,8 @@ body {
 
 .sub-title {
     font-size: 1.1rem;
-    padding-bottom: 0.5rem;
     text-align: left;
+    margin-top: 1.5rem;
 }
 
 .body-text {
@@ -47,6 +49,54 @@ body {
 
 .default-list {
     list-style: none;
-    padding: 0;
-    margin: 0.3rem 0;
+    padding: 0.2rem 0;
+    margin: 0.2rem 0;
+}
+.default-list li {
+    margin: 0.2rem 0;
+    padding: 0.2rem 0;
+}
+
+
+/* Mensagem de bem vindo */
+
+#initialWellcome p {
+    font-family: monospace;
+    font-size: 1.5rem;
+    border-right: 4px solid #000000;
+    white-space: nowrap;
+    width: 18ch;
+    overflow: hidden;
+    animation: 
+        animaCursor 1s linear infinite, 
+        animaTexto 4s steps(18) infinite
+    ;
+    animation-fill-mode: forwards;
+}
+
+@keyframes animaCursor {
+    50% {
+        border-right: transparent;
+    }
+}
+
+@keyframes animaTexto {
+    0% {
+        width: 0;
+    }
+    50% {
+        width: 18ch;
+    }
+    100% {
+        width: 18ch;
+    }
+}
+
+
+
+/* Breakpoints Resposive */
+@media (min-width: 801px) {
+    #initialWellcome p {
+        font-size: 2rem;
+    }
 }
