--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -12,7 +12,9 @@
 
     <div class="header">
         <div id="nav-logo">
-            <img src="{% static "homepage/img/logo.png" %}" alt="" srcset="">
+            <a href="{% url "index" %}">
+                <img src="{% static "homepage/img/logo.png" %}" alt="" srcset="">
+            </a>
         </div>
 
         {% comment %} Mobile menu {% endcomment %}
@@ -24,17 +26,11 @@
 
         {% comment %} Desktop menu {% endcomment %}
         <div class="navbar">
-            <ul>
-                <li class="{% if request.path == '/' %}active{% endif %}"><a href="{% url "index" %}">Home</a></li>
-                <li class="{% if request.path == '/about/' %}active{% endif %}"><a href="{% url "about" %}">Quem Somos</a></li>
-                <li class="{% if request.path == '/products-services/' %}active{% endif %}"><a href="{% url "products-services" %}">Produtos/Serviços</a></li>
-                <li>
-                    <a class="{% if request.path == '/clients/' %}active{% endif %}" href="{% url "clients" %}">Nossos Clientes</a>
-                </li>
-                <li>
-                    <a class="{% if request.path == '/contact/' %}active{% endif %}" href="{% url "contact" %}">Contato</a>
-                </li>    
-            </ul>
+            <a class="{% if request.path == '/' %}active{% endif %}" href="{% url "index" %}">Home</a>
+            <a class="{% if request.path == '/about/' %}active{% endif %}" href="{% url "about" %}">Quem Somos</a>
+            <a class="{% if request.path == '/products-services/' %}active{% endif %}" href="{% url "products-services" %}">Produtos/Serviços</a>
+            <a class="{% if request.path == '/clients/' %}active{% endif %}" href="{% url "clients" %}">Clientes</a>
+            <a class="{% if request.path == '/contact/' %}active{% endif %}" href="{% url "contact" %}">Contato</a>
         </div>
 
     </div>
@@ -70,19 +66,24 @@
     {% block content %}
     
     <div class="main-container">
+
+        <div id="initialWellcome" class="sub-container">
+            <p>Seja bem vindo(a)!</p>
+        </div>
+
         <div class="sub-container">
 
-            <h1 class="title">Desenvolvimento e Hospedagem de Sites Profissionais</h1>
-            <h2 class="sub-title">Transforme sua presença online com nossos serviços de desenvolvimento e hospedagem de sites</h2>
+            {% comment %} <h1 class="title">Desenvolvimento e Hospedagem de Sites Profissionais</h1>
+            <h2 class="sub-title">Transforme sua presença online com nossos serviços de desenvolvimento e hospedagem de sites</h2> {% endcomment %}
             <p class="body-text">Se você está procurando por uma solução completa para desenvolver e hospedar seu site, você está no lugar certo! Nós oferecemos serviços personalizados de criação de páginas institucionais e aplicativos web que atendam às suas necessidades específicas.</p>
-            <h2>Nossos Serviços</h2>
+            <p id="body-text">Transforme a sua presença online com nossos serviços de desenvolvimento e hospedagem.</p>
+            <h2 class="sub-title">Nossos Serviços</h2>
             <ul class="default-list">
                 <li>Criação de Páginas institucionais</li>
                 <li>Desenvolvimento de Aplicativos Web</li>
                 <li>Cartão de Visita Virtual</li>
                 <li>Hospedagem de Sites</li>
             </ul>
-            <p class="body-text">Visite agora mesmo nossa <a href="{% url "products-services" %}">seção de produtos</a> e veja como podemos te ajudar!</p>
 
         </div>
     
@@ -107,6 +108,13 @@
             <div class="plus-one"><a href="{% url "clients" %}">+1</a></div>
         </div>
 
+        <div id="clients-avaliation" class="sub-container">
+            <div class="grid1"></div>
+            <div class="grid2"></div>
+            <div class="grid3"></div>
+            <div class="grid4"></div>
+        </div>
+
     </div>
     
     {% endblock content %}
@@ -116,10 +124,9 @@
         <div class="footer-header">
 
             <div class="logo-footer">
-
-                
-                <img class="logo" src="{% static 'homepage/img/logo.png' %}" alt="" srcset="">
-                
+                <a href="{% url "index" %}">
+                    <img class="logo" src="{% static 'homepage/img/logo.png' %}" alt="" srcset="">
+                </a>
             </div>
 
             <div class="social-footer">
