adicionado campo de avaliação de clientes no home versão desktop

--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -109,10 +109,86 @@
         </div>
 
         <div id="clients-avaliation" class="sub-container">
-            <div class="grid1"></div>
-            <div class="grid2"></div>
-            <div class="grid3"></div>
-            <div class="grid4"></div>
+            <div class="grid1">
+                <div class="stars">
+                    <img src="{% static "homepage/img/star_ico.png" %}" alt="">
+                    <img src="{% static "homepage/img/star_ico.png" %}" alt="">
+                    <img src="{% static "homepage/img/star_ico.png" %}" alt="">
+                    <img src="{% static "homepage/img/star_ico.png" %}" alt="">
+                    <img src="{% static "homepage/img/star_ico.png" %}" alt="">
+                </div>
+                <div class="review-title">
+                    <h3>Excelente!</h3>
+                    <p>Ótimo atendimento e...</p>
+                </div>
+                <div class="review-info">
+                    <img src="{% static "homepage/img/persona.jpeg" %}" alt="">
+                    <div class="review-name">
+                        <h4>Joyce Ps</h4>
+                        <p>Arquiteta</p>
+                    </div>
+                </div>
+            </div>
+            <div class="grid2">
+                <div class="stars">
+                    <img src="{% static "homepage/img/star_ico.png" %}" alt="">
+                    <img src="{% static "homepage/img/star_ico.png" %}" alt="">
+                    <img src="{% static "homepage/img/star_ico.png" %}" alt="">
+                    <img src="{% static "homepage/img/star_ico.png" %}" alt="">
+                    <img src="{% static "homepage/img/star_ico.png" %}" alt="">
+                </div>
+                <div class="review-title">
+                    <h3>Excelente!</h3>
+                    <p>Ótimo atendimento e...</p>
+                </div>
+                <div class="review-info">
+                    <img src="{% static "homepage/img/persona.jpeg" %}" alt="">
+                    <div class="review-name">
+                        <h4>Joyce Ps</h4>
+                        <p>Arquiteta</p>
+                    </div>
+                </div>
+            </div>
+            <div class="grid3">
+                <div class="stars">
+                    <img src="{% static "homepage/img/star_ico.png" %}" alt="">
+                    <img src="{% static "homepage/img/star_ico.png" %}" alt="">
+                    <img src="{% static "homepage/img/star_ico.png" %}" alt="">
+                    <img src="{% static "homepage/img/star_ico.png" %}" alt="">
+                    <img src="{% static "homepage/img/star_ico.png" %}" alt="">
+                </div>
+                <div class="review-title">
+                    <h3>Excelente!</h3>
+                    <p>Ótimo atendimento e...</p>
+                </div>
+                <div class="review-info">
+                    <img src="{% static "homepage/img/persona.jpeg" %}" alt="">
+                    <div class="review-name">
+                        <h4>Joyce Ps</h4>
+                        <p>Arquiteta</p>
+                    </div>
+                </div>
+            </div>
+            <div class="grid4">
+                <div class="stars">
+                    <img src="{% static "homepage/img/star_ico.png" %}" alt="">
+                    <img src="{% static "homepage/img/star_ico.png" %}" alt="">
+                    <img src="{% static "homepage/img/star_ico.png" %}" alt="">
+                    <img src="{% static "homepage/img/star_ico.png" %}" alt="">
+                    <img src="{% static "homepage/img/star_ico.png" %}" alt="">
+                </div>
+                <div class="review-title">
+                    <h3>Excelente!</h3>
+                    <p>Ótimo atendimento e...</p>
+                </div>
+                <div class="review-info">
+                    <img src="{% static "homepage/img/persona.jpeg" %}" alt="">
+                    <div class="review-name">
+                        <h4>Joyce Ps</h4>
+                        <p>Arquiteta</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
