--- a/homepage/static/homepage/css/style.css
+++ b/homepage/static/homepage/css/style.css
@@ -206,24 +206,60 @@ body.no-scroll {
 
 /* Desktop */
 #clients-avaliation {
-    display: grid;
+    display: none;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 1fr;
-    column-gap: 0;
+    column-gap: 20px;
     row-gap: 0;
     width: 70%;
     height: 150px;
-    border: 1px solid red;
+}
+.grid1 {
+    grid-area: 1/1/2/2;
+}
+.grid2 {
+    grid-area: 1/2/2/3;
+}
+.grid3 {
+    grid-area: 1/3/2/4;
+}
+.grid4 {
+    grid-area: 1/4/2/5;
 }
 
-.grid1 {grid-area: 1/1/2/2;}
-.grid2 {grid-area: 1/2/2/3;}
-.grid3 {grid-area: 1/3/2/4;}
-.grid4 {grid-area: 1/4/2/5;}
-
-#clients-avaliation > div {
-    width: 10px;
+.grid1, .grid2,
+.grid3, .grid4 {
+    border: 1px solid #CCCCCC;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 1rem;
 }
+.stars {
+    display: flex;
+    align-items: start;
+    justify-content: flex-start;
+    margin-bottom: 1rem;
+}
+.stars > img {
+    width: 1rem;
+}
+.review-info {
+    display: flex;
+    margin-top: 1rem;
+}
+.review-info > img {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    margin-right: 1rem;
+}
+
+/* #clients-avaliation img {
+    width: 1rem;
+} */
 
 /* Rodapé */
 /* mobile */
@@ -278,6 +314,9 @@ body.no-scroll {
         margin: 0 0.5rem;
     }
 
+    #clients-avaliation {
+        display: grid;
+    }
 
     .menu-icon,
     #more-comments,
