primeiros testes de envio de email

--- a/homepage/static/homepage/css/style.css
+++ b/homepage/static/homepage/css/style.css
@@ -288,8 +288,33 @@ body.no-scroll {
 .social-footer img:hover {
     cursor: pointer;
 }
-
-
+.footer-content {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    column-gap: 0;
+    row-gap: 0;
+}
+.footer-division {
+    width: 300px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+}
+.footer-information {
+    font-size: 0.8rem;
+    padding: 1rem 0;
+    text-align: center;
+}
+.footer-division > a {
+    text-decoration: none;
+    color: #000000;
+    margin: 0.5rem 0;
+}
+.footer-division > a:hover {
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.3);
+}
 
 @media (min-width: 1024px) {
     .header {
@@ -322,5 +347,16 @@ body.no-scroll {
     #more-comments,
     #comments-area {
         display: none;
+    }
+
+    .footer-content {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+    }
+}
+
+@media (min-width: 1440px) {
+    .footer-content {
+        grid-template-columns: repeat(3, 1fr);
     }
 }
