--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -216,7 +216,24 @@
         </div>
 
         <div class="footer-content">
+            <div class="footer-division">
+                <h3>QUEM SOMOS</h3>
+                <a href="{% url "about" %}">Nossa História</a>
+                <a href="{% url "clients" %}">Nossos Clientes</a>
+            </div>
+            <div class="footer-division">
+                <h3>PRODUTOS E SERVIÇOS</h3>
+                <a href="{% url "products-services" %}">Nossos Serviços</a>
+            </div>
+            <div class="footer-division">
+                <h3>AJUDA</h3>
+                <a href="{% url "contact" %}">Entre em Contato</a>
 
+            </div>
+        </div>
+
+        <div class="footer-information">
+            <p>&copy;2024 - Todos os direitos reservados. Este site não armazena cookies. As informações enviadas via formulário de contato serão tratadas conforme o regimento da LGPD - Lei Geral de Proteção de Dados vigente.</p>
         </div>
 
     </div>
