--- a/homepage/templates/homepage/contact.html
+++ b/homepage/templates/homepage/contact.html
@@ -5,7 +5,27 @@
 {% block content %}
 <div class="main-container">
     <div class="sub-conteiner">
-        página de contato
+        
+        <form method="post">
+            {% csrf_token %}
+            <div>
+                <label for="name">Nome: </label>
+                <input type="text" name="nome" id="nome">
+            </div>
+            <br>
+            <div>
+                <label for="email">Email: </label>
+                <input type="email" name="email" id="email">
+            </div>
+            <br>
+            <div>
+                <label for="msg">Mensagem: </label>
+                <textarea name="msg" id="msg"></textarea>
+            </div>
+            <button type="submit">Enviar</button>
+            <br>
+        </form>
+
     </div>
 </div>
 
