--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{% static 'homepage/css/style.css' %}">
     <link rel="stylesheet" href="{% static "homepage/css/index.css" %}">
     <title>osantoschris | {% block title %}home{% endblock title %}</title>
+    {% block extra_css %}{% endblock extra_css %}
 </head>
 <body>
 
