formatação do formulário de contato

--- a/homepage/static/homepage/css/contact.css
+++ b/homepage/static/homepage/css/contact.css
@@ -5,8 +5,51 @@
     grid-template-columns: 1fr;
 }
 
-#form-contact > form {
+.contact-form {
     border: 1px solid #545454;
     border-radius: 1rem;
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.contact-form > div {
+    padding: 10px;
+}
+.btn-submit {
+    width: 95%;
+    height: 2rem;
+    border: 1px solid #CCCCCC;
+    border-radius: 0.5rem;
+    background-color: #CCCCCC;
+    color: #000000;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.form-title {
+    font-size: 2rem;
+    padding-bottom: 5rem;
+}
+
+.contact-form > div {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+}
+.contact-form > div > input, textarea {
+    width: 100%;
+}
+.contact-form > div > input {
+    height: 30px;
+    border: 1px solid #CCCCCC;
+    border-radius: 0.5rem;
+    margin: 10px 0;
+}
+.contact-form > div > textarea {
+    border: 1px solid #CCCCCC;
+    border-radius: 0.5rem;
+    margin: 10px 0;
 }
